[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeng-primitives"
version = "0.1.0"
description = "Small, framework-quality Python utilities for data pipelines."
authors = [
    { name = "Paritosh Ghimire" }
]
readme = "README.md"
requires-python = ">=3.10"

# Optional dependencies 
dependencies = []

[project.urls]
"Homepage" = "https://github.com/psgpyc/pyeng-primitives"
"Repository" = "https://github.com/psgpyc/pyeng-primitives"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"